--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.4.3",
     "rsuite": "^5.28.2",
     "toolcool-range-slider": "^4.0.21",
     "web-vitals": "^2.1.4"
